Move to Java 9
Because we can
But we won't implement any module stuff just yet